--- a/tuitpres/src/main/resources/application.properties
+++ b/tuitpres/src/main/resources/application.properties
@@ -8,7 +8,7 @@ server.port=8090
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=java_user
 spring.datasource.password=1234
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 # ===============================
 #       EMAIL
